<resources>
    <string name="app_name" translatable="false">GoSomewhere</string>
    <string name="title_activity_maps" translatable="false">GoSomewhere</string>
    <string name="you_are_here">You are here</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="toast_location_granted">Location Permissions Granted</string>
    <string name="radius_limits">Radius must be between 1 and 50</string>
    <string name="no_locations">No locations to display - Add filters to get locations</string>
    <string name="button_go_somewhere">Go Somewhere</string>
    <string name="radius_textview">Radius (Miles):</string>
    <string name="checkbox_parks">Parks and Gardens</string>
    <string name="checkbox_tourist">Tourist Spots</string>
    <string name="checkbox_natural">Natural Features</string>
    <string name="button_apply_filters">Apply Filters</string>
    <string name="textview_about">About</string>
    <string name="about_1">GoSomewhere is an app designed to make deciding where to go a lot less stressful and pain inducing by helping you make up your mind on where you will go. To find places to go, you use the “Filter Results” tab that can be found in the menu. On this page, you can enter the radius which you want to search from your current location and check the types of places that you would be willing to visit. After pressing the “Apply Filters” button you will then have locations marked on your map and all you need to do is press the “Go Somewhere” button to select a random location. This app is designed to make deciding where to go a lot less stressful and pain inducing. Happy Travelling.</string>
    <string name="about_2">For this app to work, you must allow location and internet privileges.</string>
    <string name="about_3">This app also works in the following languages:</string>
    <string name="about_english">- English</string>
    <string name="about_spanish">- Spanish</string>
    <string name="filter_search">Filter Search</string>
    <string name="map">Map</string>
</resources>
