<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top">

        <item android:id="@+id/filtersearch"
            android:title="@string/filter_search"
            app:showAsAction="never"
            android:icon="@android:drawable/ic_search_category_default"/>

        <item android:id="@+id/map"
            android:title="@string/map"
            app:showAsAction="never"
            android:icon="@android:drawable/ic_dialog_map"/>
    </group>

    <group
        android:id="@+id/menu_bottom">

        <item android:id="@+id/about"
            android:title="@string/textview_about"
            app:showAsAction="never"
            android:icon="@android:drawable/ic_dialog_info"/>
    </group>
</menu>
